--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>SuperNinja</h1>
-    <a href="/contact.html"></a>
-    <p>dupa dupa dupa duap</p>
-    <p>twoja stara twoja stara</p>
+    <h1>Contact page</h1>
 </body>
 </html>
