--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>SuperNinja</h1>
-    <a href="/contact.html">contact</a>
+    <a href="/Redirect-page-project/contact.html">contact</a>
     <p>dupa dupa dupa duap</p>
     <p>twoja stara twoja stara</p>
 </body>
