--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>SuperNinja</h1>
-    <a href="/Redirect-page-project/contact.html">contact</a>
-    <p>dupa dupa dupa duap</p>
-    <p>twoja stara twoja stara</p>
+    <h1>Example website</h1>
+    <p>Welcome to my website</p>
+    <p>It is really great to see you here</p>
+    <p>If you want to contact me, click the button below:</p>
+    <a href="/Redirect-page-project/contact.html">Contact</a>
 </body>
 </html>
